# topsic-calci

./: LICENSE.txt  README.md  pyproject.toml  topsis.py
examples/: README.md
topsis_calci/: __init__.py  cli.py  topsis.py  validators.py
